Fixed weird spacing with top buttons on collapsed mode and fixed not being able to access top buttons also in collapsed mode

--- a/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
+++ b/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
@@ -553,6 +553,13 @@
   :root[customizing] & #zen-sidebar-icons-wrapper {
     min-width: unset !important;
   }
+  #zen-sidebar-top-buttons:has(#zen-sidebar-top-buttons-customization-target:empty) {
+    max-height: 0 !important;
+    min-height: 0 !important;
+    opacity: 0;
+    overflow: hidden;
+    pointer-events: none;
+  }
   & #zen-sidebar-top-buttons {
     justify-content: center;
     max-height: unset !important;
@@ -939,7 +946,7 @@
 @media not (-moz-bool-pref: 'zen.view.compact') {
   :root[zen-right-side='true']:not([zen-sidebar-expanded='true']):not([zen-window-buttons-reversed='true']) {
     & #navigator-toolbox {
-      padding-top: var(--zen-toolbar-height);
+      margin-top: var(--zen-toolbar-height) !important;
     }
 
     & .titlebar-buttonbox-container {
@@ -961,7 +968,7 @@
 
   :root:not([zen-right-side='true']):not([zen-sidebar-expanded='true'])[zen-window-buttons-reversed='true'] {
     & #navigator-toolbox {
-      padding-top: var(--zen-toolbar-height);
+      margin-top: var(--zen-toolbar-height) !important;
     }
 
     & .titlebar-buttonbox-container {
